Version 0.9.6-git - unknown
- MAJOR: all 'sender' terms that are related to sending SMS are replaced by 'footer' (anton)
- add new options in preferences: sender and footer (anton)
- add new plugin: message template, replace word templates with phonebook related data (anton)
- add new plugin: send SMS by uploading a list in a CSV file (anton)
- add new plugin: inbox group (anton)
- add webservices type of action (ta=cr) to get user's credit (anton)
- replace $sms_datetime in several plugins to $datetime_now (anton)
- regression: Clickatell's callback URL, should be direct to callback.php (anton)
- fix SMS footer display on user and all outgoing page (anton)
- fix gateway msgtoolbox, unable to properly save message ID on incoming SMS (anton)
- fix #3414232 sms_poll log table missing datetime field (anton)

Version 0.9.5.3 - 110910
- MAJOR: fix security hole RFI http://www.exploit-db.com/exploits/17792/ (anton)
- add new option to allow/disallow forwards to inbox, email and mobile for each users (anton)
- add new language zh_CN (fvancaen)
- add new plugin, feature, SMS survey, half-way, the reporting parts are not finished (anton)
- add new method interceptsendsms() to intercept sent SMS before handled by gateway (anton)
- add new field, in_receiver, in db table tblUserInbox and tblSMSIncoming (anton)
- add all intercepts in features plugins, now hook-able from features plugin (anton)
- add method to save receiver number, currently available only in kannel and clickatell (anton)
- add sender name in email forwarded to user from PV or sms board (anton)
- add multiple destinations capability when ta=pv on webservices (anton)
- sms survey temporarily disabled, not removed, waiting for reporting parts (anton)
- sms autosend temporarily disabled, not removed, waiting for major changes (anton)
- fix checkavailablekeyword() lib/fn_core.php to have hooks return TRUE if available (anton)
- fix autoreply unable to delete scenario (anton)