@@ -10,7 +10,7 @@ function sendsms_getvalidnumber($number) {
 	return $number;
 }
 
-function interceptsendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0) {
+function interceptsendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0) {
 	global $core_config;
 	$ret = array();
 	$ret_final = array();
@@ -19,7 +19,7 @@ function interceptsendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid
 		if ($ret['modified']) {
 			$ret_final['modified'] = $ret['modified'];
 			$ret_final['param']['mobile_sender'] = $ret['param']['mobile_sender'];
-			$mobile_sender = ( $ret['param']['mobile_sender'] ? $ret['param']['mobile_sender'] : $mobile_sender );
+			$sms_sender = ( $ret['param']['mobile_sender'] ? $ret['param']['mobile_sender'] : $sms_sender );
 			$ret_final['param']['sms_footer'] = $ret['param']['sms_footer'];
 			$sms_footer = ( $ret['param']['sms_footer'] ? $ret['param']['sms_footer'] : $sms_footer );
 			$ret_final['param']['sms_to'] = $ret['param']['sms_to'];
@@ -36,14 +36,14 @@ function interceptsendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid
 			$unicode = ( $ret['param']['unicode'] ? $ret['param']['unicode'] : $unicode );
 			$message = ( $ret['param']['message'] ? $ret['param']['message'] : $message );
 		}
-		$ret = x_hook($core_config['featurelist'][$c],'interceptsendsms',array($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$sms_type,$unicode));
+		$ret = x_hook($core_config['featurelist'][$c],'interceptsendsms',array($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$sms_type,$unicode));
 	}
 	// tools list
 	for ($c=0;$c<count($core_config['toolslist']);$c++) {
 		if ($ret['modified']) {
 			$ret_final['modified'] = $ret['modified'];
 			$ret_final['param']['mobile_sender'] = $ret['param']['mobile_sender'];
-			$mobile_sender = ( $ret['param']['mobile_sender'] ? $ret['param']['mobile_sender'] : $mobile_sender );
+			$sms_sender = ( $ret['param']['mobile_sender'] ? $ret['param']['mobile_sender'] : $sms_sender );
 			$ret_final['param']['sms_footer'] = $ret['param']['sms_footer'];
 			$sms_footer = ( $ret['param']['sms_footer'] ? $ret['param']['sms_footer'] : $sms_footer );
 			$ret_final['param']['sms_to'] = $ret['param']['sms_to'];
@@ -60,13 +60,13 @@ function interceptsendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid
 			$unicode = ( $ret['param']['unicode'] ? $ret['param']['unicode'] : $unicode );
 			$message = ( $ret['param']['message'] ? $ret['param']['message'] : $message );
 		}
-		$ret = x_hook($core_config['toolslist'][$c],'interceptsendsms',array($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$sms_type,$unicode));
+		$ret = x_hook($core_config['toolslist'][$c],'interceptsendsms',array($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$sms_type,$unicode));
 	}
 	return $ret_final;
 }
 
 
-function sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0) {
+function sendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_type='text',$unicode=0) {
 	global $datetime_now, $core_config, $gateway_module;
 
 	// make sure sms_datetime is in supported format and in GMT+0
@@ -75,9 +75,9 @@ function sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_t
 	$sms_datetime = core_adjust_datetime($core_config['datetime']['now'], $core_config['main']['cfg_datetime_timezone']);
 
 	// sent sms will be handled by plugin/tools/* first
-	$ret_intercept = interceptsendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$sms_type,$unicode);
+	$ret_intercept = interceptsendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$sms_type,$unicode);
 	if ($ret_intercept['modified']) {
-		$mobile_sender = ( $ret_intercept['param']['mobile_sender'] ? $ret_intercept['param']['mobile_sender'] : $mobile_sender );
+		$sms_sender = ( $ret_intercept['param']['mobile_sender'] ? $ret_intercept['param']['mobile_sender'] : $sms_sender );
 		$sms_footer = ( $ret_intercept['param']['sms_footer'] ? $ret_intercept['param']['sms_footer'] : $sms_footer );
 		$sms_to = ( $ret_intercept['param']['sms_to'] ? $ret_intercept['param']['sms_to'] : $sms_to );
 		$sms_msg = ( $ret_intercept['param']['sms_msg'] ? $ret_intercept['param']['sms_msg'] : $sms_msg );
@@ -88,7 +88,7 @@ function sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_t
 	}
 
 	// fixme anton - mobile number can be anything, screened by gateway
-	// $mobile_sender = sendsms_getvalidnumber($mobile_sender);
+	// $sms_sender = sendsms_getvalidnumber($sms_sender);
 
 	$ok = false;
 	$username = uid2username($uid);
@@ -104,16 +104,16 @@ function sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid=0,$sms_t
 		$db_query = "
     	    INSERT INTO "._DB_PREF_."_tblSMSOutgoing 
     	    (uid,p_gpid,p_gateway,p_src,p_dst,p_footer,p_msg,p_datetime,p_sms_type,unicode) 
-    	    VALUES ('$uid','$gpid','$gateway_module','$mobile_sender','$sms_to','$sms_footer','$sms_msg','$sms_datetime','$sms_type','$unicode')
+    	    VALUES ('$uid','$gpid','$gateway_module','$sms_sender','$sms_to','$sms_footer','$sms_msg','$sms_datetime','$sms_type','$unicode')
 	";
-		logger_print("saving:$uid,$gpid,$gateway_module,$mobile_sender,$sms_to,$sms_type,$unicode", 3, "sendsms");
+		logger_print("saving:$uid,$gpid,$gateway_module,$sms_sender,$sms_to,$sms_type,$unicode", 3, "sendsms");
 		// continue to gateway only when save to db is true
 		if ($smslog_id = @dba_insert_id($db_query)) {
 			logger_print("smslog_id:".$smslog_id." saved", 3, "sendsms");
 			// fixme anton - another mess !
 			$sms_footer = stripslashes($sms_footer);
 			$sms_msg = stripslashes($sms_msg);
-			if (x_hook($gateway_module, 'sendsms', array($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$smslog_id,$sms_type,$unicode))) {
+			if (x_hook($gateway_module, 'sendsms', array($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$gpid,$smslog_id,$sms_type,$unicode))) {
 				// fixme anton - deduct user's credit as soon as gateway returns true
 				rate_deduct($smslog_id);
 				$ok = true;
@@ -129,7 +129,7 @@ function sendsms_pv($username,$sms_to,$message,$sms_type='text',$unicode=0) {
 	global $apps_path, $core_config;
 	global $datetime_now, $gateway_module;
 	$uid = username2uid($username);
-	$mobile_sender = username2mobile($username);
+	$sms_sender = username2sender($username);
 	$max_length = $core_config['smsmaxlength'];
 	if ($sms_footer = username2footer($username)) {
 		$max_length = $max_length - strlen($sms_footer) - 1;
@@ -144,8 +144,8 @@ function sendsms_pv($username,$sms_to,$message,$sms_type='text',$unicode=0) {
 	//$sms_msg = str_replace("\n","",$sms_msg);
 	$sms_msg = str_replace("\"","'",$sms_msg);
 
-	$mobile_sender = str_replace("\'","",$mobile_sender);
-	$mobile_sender = str_replace("\"","",$mobile_sender);
+	$sms_sender = str_replace("\'","",$sms_sender);
+	$sms_sender = str_replace("\"","",$sms_sender);
 	$sms_footer = str_replace("\'","",$sms_footer);
 	$sms_footer = str_replace("\"","",$sms_footer);
 	if (is_array($sms_to)) {
@@ -158,7 +158,7 @@ function sendsms_pv($username,$sms_to,$message,$sms_type='text',$unicode=0) {
 		$c_sms_to = str_replace("\"","",$c_sms_to);
 		$to[$i] = $c_sms_to;
 		$ok[$i] = false;
-		if ($ret = sendsms($mobile_sender,$sms_footer,$c_sms_to,$sms_msg,$uid,0,$sms_type,$unicode)) {
+		if ($ret = sendsms($sms_sender,$sms_footer,$c_sms_to,$sms_msg,$uid,0,$sms_type,$unicode)) {
 			$ok[$i] = $ret['status'];
 			$smslog_id[$i] = $ret['smslog_id'];
 		}
@@ -185,9 +185,9 @@ function sendsms_bc($username,$gpid,$message,$sms_type='text',$unicode=0) {
 	//$sms_msg = str_replace("\n","",$sms_msg);
 	$sms_msg = str_replace("\"","'",$sms_msg);
 
-	$mobile_sender = username2mobile($username);
-	$mobile_sender = str_replace("\'","",$mobile_sender);
-	$mobile_sender = str_replace("\"","",$mobile_sender);
+	$sms_sender = username2sender($username);
+	$sms_sender = str_replace("\'","",$sms_sender);
+	$sms_sender = str_replace("\"","",$sms_sender);
 
 	// destination group should be an array, if single then make it array of 1 member
 	if (is_array($gpid)) {
@@ -207,7 +207,7 @@ function sendsms_bc($username,$gpid,$message,$sms_type='text',$unicode=0) {
 			$sms_to = str_replace("\"","",$sms_to);
 			$to[$j] = $sms_to;
 			$ok[$j] = 0;
-			if ($ret = sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid,$c_gpid,$sms_type,$unicode)) {
+			if ($ret = sendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid,$c_gpid,$sms_type,$unicode)) {
 				$ok[$j] = $ret['status'];
 				$smslog_id[$i] = $ret['smslog_id'];
 			}
