@@ -9,7 +9,7 @@ function template_hook_playsmsd() {
 // hook_sendsms
 // called by main sms sender
 // return true for success delivery
-// $mobile_sender	: sender mobile number
+// $sms_sender	: sender mobile number
 // $sms_footer		: sender sms footer or sms sender ID
 // $sms_to		: destination sms number
 // $sms_msg		: sms message tobe delivered
@@ -18,7 +18,7 @@ function template_hook_playsmsd() {
 // $smslog_id		: sms ID
 // $msg_type		: send flash message when the value is "flash"
 // $unicode		: send unicode character (16 bit)
-function template_hook_sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gpid=0,$smslog_id=0,$sms_type='text',$unicode=0) {
+function template_hook_sendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gpid=0,$smslog_id=0,$sms_type='text',$unicode=0) {
 	// global $tmpl_param;   // global all variables needed, eg: varibles from config.php
 	// ...
 	// ...
