@@ -111,7 +111,7 @@ function gammu_hook_getsmsinbox() {
 	@closedir($handle);
 }
 
-function gammu_hook_sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gpid=0,$smslog_id=0,$sms_type='text',$unicode=0) {
+function gammu_hook_sendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gpid=0,$smslog_id=0,$sms_type='text',$unicode=0) {
 	global $gammu_param;
 	$date = date('Ymd', time());
 	$time = date('Gis', time());
