@@ -76,7 +76,7 @@ function gnokii_hook_getsmsinbox() {
 	}
 }
 
-function gnokii_hook_sendsms($mobile_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gpid=0,$smslog_id=0,$sms_type='text',$unicode=0) {
+function gnokii_hook_sendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gpid=0,$smslog_id=0,$sms_type='text',$unicode=0) {
 	global $gnokii_param;
 	$sms_id = "$gpid.$uid.$smslog_id";
 	if (empty($sms_id)) {
